Fixing course alignment

--- a/src/components/pages/Home/CourseItem/CourseItem.module.scss
+++ b/src/components/pages/Home/CourseItem/CourseItem.module.scss
@@ -11,12 +11,12 @@
   margin: 0;
   &_bold {
     @extend .text;
-    font-family: "GothamMedium";
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
   }
   &_regular {
     @extend .text;
-    font-family: "GothamRegular";
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   }
 }
 
@@ -31,11 +31,11 @@
 }
 
 .outcomes {
-  font-family: "GothamRegular";
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 15px;
   text-align: center;
   justify-content: center;
-  line-height: 1.3rem !important;
+  line-height: 20px !important;
   margin-top: 5%;
   @media only screen and (max-width: 768px) {
     text-align: justify;
@@ -198,7 +198,7 @@
 
 @media only screen and (max-width: 1200px) {
   .body .sup_body .outcomes {
-    font-family: "GothamRegular";
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-size: 8pt;
     text-align: center;
     line-height: 1rem !important;
